<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ecovve</string>
    <string name="login">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="create_account">Create account</string>
    <string name="phone_number_or_email">Phone Number OR Email</string>
    <string name="login_to_your_account">Login to your account</string>
    <string name="login_text">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="remember_me">Remember Me!</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in_span">Sign in</string>
    <string name="did_you_remember_your_password">Did you remember your password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="let_us_help_you">Let us help you</string>
    <string name="resend_reset_code">Resend reset code</string>
    <string name="new_password">New Password</string>
    <string name="new_password_for_you">New password for you</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="done">Done</string>
    <string name="enter_the_code">Please enter the code</string>
    <string name="validate_code">Validate Code</string>
    <string name="password_dont_match">Password don\'t match</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" tools:ignore="MissingTranslation">Android Studio</string>
    <string name="nav_header_subtitle" tools:ignore="MissingTranslation">android.studio@android.com</string>
    <string name="nav_header_desc" tools:ignore="MissingTranslation">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home" tools:ignore="MissingTranslation">HomeActivity</string>
    <string name="we_sent_code">We have sent to you a reset code</string>
    <string name="home">Home</string>
    <string name="my_orders">My Orders</string>
    <string name="offers">Offers</string>
    <string name="notifications">Notifications</string>
    <string name="top_cafes">Top Cafes</string>
    <string name="new_cafes">New Cafes</string>
    <string name="live_chat">Live Chat</string>
    <string name="more">More</string>
    <string name="info">Info</string>
    <string name="signout">Signout</string>
    <string name="google_maps_key">AIzaSyDehUaIJlUT49Hcyv0mr7RxqNHKURv8HFo</string>
    <string name="select_your_area">Select Your Area</string>
    <string name="cuisines_type">Cuisines Type</string>
    <string name="previous_orders">Previous Orders</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="wichlist">Wichlist</string>
    <string name="cart">Cart</string>
    <string name="quantity">Quantity:</string>
    <string name="quantity_edit">Quantity</string>
    <string name="total">Total</string>
    <string name="close">Close</string>
    <string name="edit">Edit</string>
    <string name="add_items">Add Items</string>
    <string name="price">Price:</string>
    <string name="order_from_other_cafes">ORDER FROM OTHER CAFES</string>
    <string name="continue_order">CONTINUE</string>
    <string name="found_cafes">Cafe found</string>
    <string name="pay_by">Pay by:</string>
    <string name="avg">delivery time:</string>
    <string name="min">Min order:</string>
    <string name="delivery">delivery fee:</string>
    <string name="menu">Menu</string>
    <string name="reviews">Reviews</string>
    <string name="info_tab">Info</string>
    <string name="area">Area</string>
    <string name="order_type">Order Type</string>
    <string name="delivery_order_type">Delivery</string>
    <string name="choose_your_time">Choose your time</string>
    <string name="pick_up">Pick-up</string>
    <string name="add_new_address">Add New</string>
    <string name="payment_method">Payment Methods</string>
    <string name="edit_payment_methods">Edit Payment Methods</string>
    <string name="add_new_method">Add new method</string>
    <string name="configure_payment_method">Configure Payment Method</string>
    <string name="your_address">Your Address</string>
    <string name="autofill_address_using_map_or_enter_address_below">Autofill address using map or enter address below</string>
    <string name="address_name">Address Name</string>
    <string name="hello_blank_fragment" tools:ignore="MissingTranslation">Hello blank fragment</string>
    <string name="payment_complete_message"><![CDATA[We\'ve sent to you an email with all the details & remember you can track your order using this app!]]></string>
    <string name="payment_completed">Payment Completed</string>
    <string name="order_number">Order Number</string>
    <string name="view_my_orders">View My Orders</string>
    <string name="delivered">Delivered</string>
    <string name="shipped">Shipped</string>
    <string name="in_progress">In Progress</string>
    <string name="received">Received</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="view_order">View Order</string>
    <string name="order">Order:</string>
    <string name="after">After:</string>
    <string name="past_orders">Past Orders</string>
    <string name="ongoing_orders">Ongoing Orders</string>
    <string name="leave_feedback">Leave Feedback</string>
    <string name="order_time">Order Time:</string>
    <string name="deliver_time">Deliver Time:</string>
    <string name="more_details">more details</string>
    <string name="messages">Messages</string>
    <string name="friends">Friends</string>
    <string name="groups">Groups</string>
    <string name="friend_requests">Friend requests</string>
    <string name="your_groups">Your Groups</string>
    <string name="create_group">Create Group</string>
    <string name="yourfriends">YourFriends</string>
    <string name="accept">Accept</string>
    <string name="delete">Delete</string>
    <string name="manage">Manage</string>
    <string name="leave">Leave</string>
    <string name="join">Join</string>
    <string name="search_by_name">Search by name</string>
    <string name="email">Email</string>
    <string name="near_by">Near by</string>
    <string name="search_by">Search by</string>
    <string name="search">Search</string>
    <string name="search_for_cafe">Search for Cafe</string>
    <string name="all">All Cuisines</string>
    <string name="subscribed_groups">Subscribed groups</string>
    <string name="recommnded_groups">Recommnded Groups</string>
    <string name="or">OR</string>
    <string name="featured_offers">Featured Offers</string>
    <string name="see_all">See all</string>
    <string name="delivery_to">Delivery To:</string>
    <string name="account_info">Account Settings</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="application_settings">Application Settings</string>
    <string name="notifications_settings">Notifications Settings</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="date_of_birth_optional">Date of birth (optional)</string>
    <string name="male">Male</string>
    <string name="gender_optional">Gender (Optional)</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="new_email">New Email</string>
    <string name="current_password">Current Password</string>
    <string name="name_on_card">Name on card</string>
    <string name="card_number">Card number</string>
    <string name="ccv" tools:ignore="MissingTranslation">CCV</string>
    <string name="add_payment_method">Add Payment method</string>
    <string name="opening_hours">Opening Hours</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="payment_options">Payment Options</string>
    <string name="address_type">Address Type</string>
    <string name="phone">Phone</string>
    <string name="block">Block</string>
    <string name="address_area">Area</string>
    <string name="street">Street</string>
    <string name="parcel">Parcel</string>
    <string name="house_building_number">House / building number</string>
    <string name="additional_instructions_optional">Additional instructions (optional)</string>
    <string name="urmessage">Your message</string>
    <string name="quality_items">Quality items</string>
    <string name="optional">(Optional)</string>
    <string name="delivery_review">Delivery Review</string>
    <string name="your_feedback">Your Feedback</string>
    <string name="please_write_your_feedback">Please write your feedback</string>
    <string name="recomended">Recommended</string>
    <string name="rating">Rating</string>
    <string name="open_restaurant">Open Restaurant</string>
    <string name="master_card">Master Card</string>
    <string name="k_net">K-Net</string>
    <string name="free_delivery">Free Delivery</string>
    <string name="new_cafe">New Cafe</string>
    <string name="filter_by">Filter by</string>
    <string name="sms_notification">SMS Notification</string>
    <string name="newsletter_subscription">Newsletter Subscription</string>
    <string name="application_notification">Application Notification</string>
    <string name="new_messages">New Messages</string>
    <string name="popup_notification">Popup Notification</string>
    <string name="new_offers">New Offers</string>
    <string name="view_profile">View Profile</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="add_to_group">Add to group</string>
    <string name="uploadphoto">UploadPhoto</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="report">Report</string>
    <string name="search_group">Search for a group</string>
    <string name="invite">Invite</string>
    <string name="add_new_payment_method">Add new payment method</string>
    <string name="add_new_methodd">Add new method</string>
    <string name="add_new_addresss">Add new address</string>
    <string name="your_payment_methods">Your payment methods</string>
    <string name="title_activity_map_address">Map</string>
    <string name="confirm">Confirm</string>
    <string name="skip">SKIP</string>
    <string name="search_for_address">Search For Address</string>
    <string name="call_delviry">CALL DELIVERY</string>
    <string name="title_activity_maps_adress">Add address</string>
    <string name="seconds_short_cut" tools:ignore="MissingTranslation">s</string>
    <string name="resend_code">Resend code after</string>
    <string name="female">Female</string>
    <string name="buy_gift_card">Buy Gift Card</string>
    <string name="save">Save</string>
    <string name="add_room">Add Room</string>
    <string name="submit">submit</string>
    <string name="desc">Description</string>
    <string name="room_name">Room Name</string>
    <string name="try_agian">Try Again</string>
    <string name="no_internet">No Internet Try Later!</string>
    <string name="alert">Alert</string>
    <string name="u4_program">4U Program</string>
    <string name="contact">Contact Us</string>
</resources>