<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="Autofill">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.q8intouch.ecovve.ui.settings.account_info.AccountInfoViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/_20sdp"
            android:paddingTop="@dimen/_30sdp"
            android:paddingEnd="@dimen/_20sdp"
            tools:background="@color/textWhite">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/edit"
                    android:textColor="@color/colorPrimary"
                    android:textSize="12sp"
                    android:visibility="gone"
                    app:fontFamily="@font/poppins_medium" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:inputType="textEmailAddress"
                        android:paddingBottom="@dimen/_16sdp"
                        android:text="@{ viewModel.email }"
                        android:textColor="@color/GrayA1"
                        android:textSize="14sp"
                        app:fontFamily="@font/poppins_medium" />


                </com.google.android.material.textfield.TextInputLayout>
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:hint="@string/full_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:paddingBottom="@dimen/_16sdp"
                    android:text="@{ viewModel.name }"
                    android:textColor="@color/textMoreDarkGray"
                    android:textSize="14sp"
                    app:fontFamily="@font/poppins_medium" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:hint="@string/date_of_birth_optional">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:paddingBottom="@dimen/_16sdp"
                    android:text="@{ viewModel.birthDate }"
                    android:textColor="@color/textMoreDarkGray"
                    android:textSize="14sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/gender_optional"
                android:textColor="@color/textMoreDarkGray"
                android:textSize="12sp"
                app:fontFamily="@font/poppins_medium" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{ safeUnbox(viewModel.isMale) }"
                    android:text="@string/male" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:checked="@{ safeUnbox(!viewModel.isMale) }"
                    android:text="@string/female" />
            </RadioGroup>

            <Button
                android:id="@+id/btnLogin"
                style="@style/bigButton"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_45sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:elevation="3dp"
                android:onClick="@{ () -> viewModel.onSaveClicked() }"
                android:text="@string/save"
                android:textAllCaps="false" />

        </LinearLayout>
    </FrameLayout>
</layout>