<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/textWhite"
            android:layoutDirection="ltr"
            app:cardCornerRadius="15dp"
            app:cardElevation="@dimen/_10sdp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <View
                    android:layout_width="@dimen/_10sdp"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:id="@+id/layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline2"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toBottomOf="@+id/card">


                    <TextView
                        style="@style/textTitlePrimary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/add_room" />

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_20sdp"
                        android:hint="@string/room_name"
                        android:inputType="text"
                        tools:ignore="TextFields" />

                    <EditText
                        android:id="@+id/etDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_20sdp"
                        android:hint="@string/desc"
                        android:inputType="text"
                        tools:ignore="TextFields" />

                    <Button
                        style="@style/adButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/submit"
                        android:textAllCaps="false" />

                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </FrameLayout>

</layout>