<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="Autofill">

    <data>

        <variable
            name="viewModel"
            type="com.q8intouch.ecovve.ui.home.HomeViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:orientation="vertical"
        tools:background="@color/textWhite">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_email"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:paddingBottom="@dimen/_16sdp"
                android:text="annoy@me.com"
                android:textColor="@color/textMoreDarkGray"
                android:textSize="14sp"
                app:fontFamily="@font/poppins_medium" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:hint="@string/confirm_email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:paddingBottom="@dimen/_16sdp"
                android:textColor="@color/textMoreDarkGray"
                android:textSize="14sp"
                app:fontFamily="@font/poppins_medium" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/_16sdp"
                android:textColor="@color/textMoreDarkGray"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnLogin"
            style="@style/bigButton"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_45sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:elevation="3dp"
            android:text="@string/save"
            android:textAllCaps="false" />

    </LinearLayout>

</layout>